--- a/src/components/BaseCreatetable/BaseCreateTable.css
+++ b/src/components/BaseCreatetable/BaseCreateTable.css
@@ -25,3 +25,19 @@
   /* outline: 0 !important; */
   box-shadow: none !important;
 }
+
+.btn_note {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  text-align: start;
+  padding: 0 2px;
+  font-size: 20px;
+  color: #727171;
+}
+.form-control:disabled {
+  background-color: white !important;
+}
+.form-control {
+  font-size: 20px !important;
+}
