--- a/src/components/BaseCreatetable/BaseCreateTable.css
+++ b/src/components/BaseCreatetable/BaseCreateTable.css
@@ -37,3 +37,7 @@
 .form-control {
   font-size: 20px !important;
 }
+.spinner_modal .modal-content {
+  background-color: transparent !important;
+  border: none !important;
+}
